package edu.ntnu.idatt2003.lectures.interfaces.animal;

/**
 * The Eatable interface represents an entity that can be eaten.
 */
public interface Eatable {
  boolean canEat();
}
