package edu.ntnu.idatt2003.lectures.interfaces.animal;

/**
 * The Swimable interface represents the ability to swim.
 * It extends the Moveable interface.
 */
public interface Swimable extends Moveable {
  boolean canSwim();
}
