@startuml
abstract class Animal {
  -name: String
  -birthDate: LocalDate
  +Animal(name: String, birthDate: LocalDate)
  +canMove(): boolean
  +getName(): String
  +getAge(): float
  +compareTo(anotherAnimal: Animal): int
}
class Bird {
  -wingSpan: double
  +Bird(name: String, birthDate: LocalDate, wingSpan: double)
  +canEat(): boolean
  +canFly(): boolean
  +canWalk(): boolean
  +getWingSpan(): double
  +hashCode(): int
  +equals(obj: Object): boolean
  +toString(): String
}

class Cat {
  -numberOfLives: int
  +Cat(name: String, birthDate: LocalDate, numberOfLives: int)
  +getNumberOfLives(): int
  +canEat(): boolean
  +canWalk(): boolean
  +toString(): String
}

class Dog {
  -breed: String
  +Dog(name: String, birthDate: LocalDate, breed: String)
  +getBreed(): String
  +canEat(): boolean
  +canWalk(): boolean
  +hashCode(): int
  +equals(obj: Object): boolean
  +toString(): String
}


class Fish {
  -waterType: String
  +Fish(name: String, birthDate: LocalDate, waterType: String)
  +getWaterType(): String
  +canEat(): boolean
  +canSwim(): boolean
  +hashCode(): int
  +equals(obj: Object): boolean
  +toString(): String
}

class FlyingFish {
  -finSize: double
  +FlyingFish(name: String, birthDate: LocalDate, waterType: String, finSize: double)
  +getFinSize(): double
  +canFly(): boolean
  +hashCode(): int
  +equals(obj: Object): boolean
  +toString(): String
}

interface Comparable {
  +compareTo(T: T): int
}

interface Moveable {
  +canMove(): boolean
}

interface Walkable {
  +canWalk(): boolean
}

interface Flyable {
  +canFly(): boolean
}

interface Eatable {
  +canEat(): boolean
}

interface Swimable {
  +canSwim(): boolean
}


Animal --|> Comparable
Animal --|> Moveable


Bird --|> Animal
Bird --|> Walkable
Bird --|> Flyable
Bird --|> Eatable


Cat --|> Animal
Cat --|> Walkable
Cat --|> Eatable

Dog --|> Animal
Dog --|> Walkable
Dog --|> Eatable

Fish --|> Animal
Fish --|> Swimable
Fish --|> Eatable

FlyingFish --|> Fish
FlyingFish --|> Flyable

@enduml